<resources>
    <string name="app_name">Clase03</string>
    <string name="lbl_listar">Listar</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_crear_usuario">Crear Usuario</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_masculino">Masculino</string>
    <string name="lbl_femenino">Femenino</string>
    <string name="lbl_guardar">Guardar</string>
</resources>
